tests/vendor/valid/trivial/unused_value.c
//expect 0
//tags: trivial
int main() {
    2 + 2;
    return 0;
}