tests/vendor/invalid/semantics/postfix_incr_fun_name.c
//tags: functions
int x();

int main() {
    x++;
    return 0;
}